# flask-celery-example

./: .env.example  .gitignore  README.md  celery_worker.py  config.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  snyk-container.yml
example/: __init__.py  models.py  tasks.py  views.py
src/: app.py  config.py  extensions.py  worker.py
src/controllers/: __init__.py  home.py  messages.py  status.py
src/models/: message.py
src/tasks/: long_task.py
