[tool.poetry]
name = "flask-celery-example"
version = "0.1.0"
description = ""
authors = ["nebularazer <nebularazer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
flask = "^1.1.2"
celery = "^4.4.7"
redis = "^3.5.3"
psycopg2-binary = "^2.8.5"
flask-sqlalchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
black = "^19.10b0"
python-dotenv = "^0.14.0"
flake8 = "^3.8.3"
mypy = "^0.782"
pydocstyle = "^5.0.2"

[tool.black]
skip-string-normalization = false
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
